# miniworld

./: .gitignore  ARCHITECTURE.md  README.md  model.py  pyproject.toml  train.py
data/: human.py  idm.py
